<resources>
    <string name="app_name">Mausam</string>
    <string name="back_pressed">Back pressed</string>
    <string name="manage_location">Manage location</string>
    <string name="press_back">Press back</string>
    <string name="nested_scroll_view">Nested scroll view</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_present_location">Get present location</string>
    <string name="add_to_start_page">Add to start page</string>
    <string name="add_new_location">Add new location</string>
    <string name="loc">Locations</string>
    <string name="no_location_added_yet">No location added yet!</string>
    <string name="cancel">Cancel</string>
    <string name="get_nlocation">Get\nlocation</string>
    <string name="name">Name</string>
    <string name="drag_the_location">Drag the location</string>
    <string name="aqi_000">AQI</string>
    <string name="_00_0">00° / 0°</string>
    <string name="select_place">Select place</string>
    <string name="_00">00</string>
    <string name="delete_place">Delete place</string>
    <string name="delete_the_place">Delete the place</string>
    <string name="select_multiple_places">Select multiple places</string>
    <string name="manage_places">Manage Places</string>
    <string name="delete_all_places_selected">Delete all places selected</string>
    <string name="place">Place</string>
    <string name="zero">00</string>
    <string name="degree">°</string>
    <string name="degree_celcius">°C</string>
    <string name="haze">Haze</string>
    <string name="aqi_icon">AQI icon</string>
    <string name="aqi">AQI</string>
    <string name="_000">000</string>
    <string name="title">Title</string>
    <string name="please_wait">Please Wait…</string>
    <string name="_0000">000</string>
    <string name="slash">/</string>
    <string name="aqi_level">AQI Level-</string>
    <string name="icon">Icon</string>
    <string name="today">Today-</string>
    <string name="cloudy">Cloudy</string>
    <string name="_00_00">00° / 00°</string>
    <string name="tomorrow">Tomorrow-</string>
    <string name="snow">Snow</string>
    <string name="sat">Sat-</string>
    <string name="mist">Mist</string>
    <string name="_5_day_forecast">5-day forecast</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="fri">Fri-</string>
    <string name="now">Now</string>
    <string name="_17">17</string>
    <string name="_00_0_">00.0</string>
    <string name="km_h">km/h</string>
    <string name="sunrise">Sunrise</string>
    <string name="_07_15">07:15 am</string>
    <string name="sunset">Sunset</string>
    <string name="_06_00_pm">06:00 pm</string>
    <string name="real_feel">Real feel</string>
    <string name="_20">20</string>
    <string name="humidity">Humidity</string>
    <string name="percentage_sign">%</string>
    <string name="_51">51</string>
    <string name="wind_speed">Wind speed</string>
    <string name="_13_0">13.0</string>
    <string name="pressure">Pressure</string>
    <string name="_1016">1016</string>
    <string name="mbar">mbar</string>
    <string name="_10000">10000</string>
    <string name="m">m</string>
    <string name="visibility">Visibility</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="_88">88</string>
    <string name="air_quality_index">Air Quality Index</string>
    <string name="_186">186</string>
    <string name="full_air_quality_forecast"><![CDATA[Full air quality forecast >]]></string>
    <string name="update">Update…</string>
    <string name="update_icon">Update icon</string>
    <string name="_5">5</string>
    <string name="level">Level-</string>

    <string name="aqi_1_warning">Good</string>
    <string name="aqi_2_warning">Moderate</string>
    <string name="aqi_3_warning">Unhealthy for Sensitive Groups</string>
    <string name="aqi_4_warning">Unhealthy</string>
    <string name="aqi_5_warning">Very unhealthy</string>

    <string name="aqi_1_description">Air quality is considered satisfactory, and air pollution poses little or no risk.</string>
    <string name="aqi_2_description">Air quality is acceptable. However, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.</string>
    <string name="aqi_3_description">Members of sensitive groups may experience health effects. The general public is not likely to be affected.</string>
    <string name="aqi_4_description">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects.</string>
    <string name="aqi_5_description">Health warnings of emergency conditions. The entire population is more likely to be affected.</string>
    <string name="_181_1">181.1</string>
    <string name="pm2_5">PM2.5</string>
    <string name="_205_9">205.9</string>
    <string name="pm10">PM10</string>
    <string name="_19_9">19.9</string>
    <string name="so2">SO2</string>
    <string name="no2">NO2</string>
    <string name="_13_7">13.7</string>
    <string name="o3">O3</string>
    <string name="co">CO</string>
    <string name="no">NO</string>
    <string name="nh3">NH3</string>
    <string name="line">Line</string>
    <string name="more_on_air_quality">More on air quality</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="_25_1">25/1</string>
    <string name="_10_7km_h">10.7km/h</string>
    <string name="today2">Today</string>
    <string name="updating">Updating…</string>
    <string name="updating_icon">Updating icon</string>
    <string name="search_place">Search place</string>
    <string name="search">search…</string>
    <string name="no_such_place_available">No such place available</string>
    <string name="andaman_and_nicobar">Andaman And Nicobar</string>
    <string name="dadra_and_nagar_haveli">Dadra And Nagar Haveli</string>
</resources>