<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".activities.AirQualityDisplayActivity">

    <ImageButton
        android:id="@+id/backPressIB2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="start|top"
        android:background="@drawable/ic_transparent_ib_bg"
        android:contentDescription="@string/back_pressed"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/airQualityDisplayAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/airQualityCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:toolbarId="@id/toolBar"
            app:title="@string/air_quality_index"
            app:collapsedTitleGravity="center"
            android:background="@color/black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextColor="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/airQualityToolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/air_quality_index">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/aqiLevelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="100sp"
                android:textColor="@color/yellow"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/warningTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi_3_warning"
                android:maxEms="8"
                android:textSize="22sp"
                android:textColor="@color/yellow"
                android:layout_marginBottom="27dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/aqiLevelTV"
                app:layout_constraintBottom_toBottomOf="@id/aqiLevelTV"/>

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/aqi_3_description"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/warningTV" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/transparent"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/descriptionTV"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pm_25_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_181_1"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pm2_5"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pm_10_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_205_9"
                        android:gravity="center"
                        android:textColor="@color/yellow"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pm10"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/so2_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_19_9"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/so2"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/no2_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_13_7"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="22sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no2"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/o3_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_181_1"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/o3"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/co_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_205_9"
                        android:gravity="center"
                        android:textColor="@color/yellow"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/co"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nh3_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_13_7"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="22sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nh3"
                        android:gravity="center"
                        android:textColor="#BFBCBC"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:contentDescription="@string/line"
                android:background="@drawable/line"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="48dp"
                app:layout_constraintTop_toBottomOf="@+id/ll2"/>


            <LinearLayout
                android:id="@+id/moreOnAqiLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/btn_bg_2"
                app:layout_constraintTop_toBottomOf="@+id/line" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:text="@string/more_on_air_quality"
                    android:textColor="#959393"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical|end"
                    android:text="@string/arrow"
                    android:textColor="#959393"
                    android:textSize="21sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>