<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="87dp"
    app:cardCornerRadius="20dp"
    android:id="@+id/item"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rain"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/dragLiverIV"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:src="@drawable/ic_baseline_menu_24"
            android:contentDescription="@string/drag_the_location"
            android:layout_marginVertical="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/dragLiverIV"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/placeNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/araboto_normal"
                android:maxEms="5"
                android:text="@string/dadra_and_nagar_haveli"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/ll_aqi_min_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aqi_level"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="11sp"/>

                <TextView
                    android:id="@+id/aqiTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0000"
                    android:textStyle="bold"
                    android:layout_marginStart="3.5dp"
                    android:textColor="@color/white"
                    android:textSize="11sp"/>

                <TextView
                    android:id="@+id/minTempTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:layout_marginHorizontal="3.5dp"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maxTempTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/selectPlaceIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_not_selected_place"
            android:contentDescription="@string/select_place"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/selectPlaceIB">

            <TextView
                android:id="@+id/temperatureTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:text="@string/_00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_celcius"
                android:textStyle="bold"
                android:layout_marginTop="9dp"
                android:layout_gravity="top"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>